deploy/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abra-api
  labels:
    app: abra-api
    app.kubernetes.io/name: abra
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  selector:
    app: abra-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
